--- a/Spotiby/arquivos/style/stilo.css
+++ b/Spotiby/arquivos/style/stilo.css
@@ -82,7 +82,7 @@ h1 {
 
 .miau {
     background-color: #4caf8e;
-    /* Green */
+    /* Verde */
     border: none;
     color: #232323;
     padding: 20px;
